doc(sidebar): fix jumping menu #1671

--- a/docgen/src/stylesheets/components/_documentation.scss
+++ b/docgen/src/stylesheets/components/_documentation.scss
@@ -87,7 +87,7 @@
     position: relative;
     left: #{$sidebar-width};
     width: calc(100% - #{$sidebar-width});
-    min-height: 890px;
+    min-height: 1000px;
     padding-left: 30px;
     padding-bottom: 200px;
     padding-top: 120px;
